<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_menu"
   >

    <item
        android:id="@+id/menuCocktails"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/menuFavorites"
        android:title="@string/nav_favorites"
        android:icon="@drawable/ic_favorite" />

<!--    <item-->
<!--        android:id="@+id/action_search"-->
<!--        android:title="@string/search"-->
<!--        android:icon="@android:drawable/ic_menu_search"-->
<!--        app:showAsAction="ifRoom|collapseActionView"-->
<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"-->
<!--        />-->


    <item
        android:id="@+id/menuItems"
        android:title="@string/items"
        android:icon="@drawable/menu"
       />

</menu>
