<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/_50dp"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCocktailImage"
            android:layout_width="0dp"
            android:layout_height="@dimen/_250dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cocktail_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" >

        </ImageView>

        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_margin="@dimen/_16dp"
            android:layout_marginTop="@dimen/_200dp"
            android:layout_marginEnd="@dimen/_304dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/action_favorite"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCocktailImage"
            tools:text="Mojito" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Cocktail" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAlcoholic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Alcoholic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGlass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Highball glass" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tvIngredientsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/ingredients_title"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup" />

        <TextView
            android:id="@+id/tvIngredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:lineSpacingExtra="@dimen/_4dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIngredientsTitle"
            tools:text="@string/_2_oz_white_rum_1_oz_fresh_lime_juice_2_tsp_sugar" />

        <TextView
            android:id="@+id/tvInstructionsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/instructions_title"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIngredients" />

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/_25dp"
            android:lineSpacingExtra="@dimen/_4dp"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInstructionsTitle"
            tools:text="@string/muddle_mint_leaves_with_sugar_and_lime_juice" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>